@@ -1,5 +1,6 @@
 0.2.01 (--.--.2014):
 - added quick go to or search of clipboard contents on middle click on address field;
+- minor improvements in cache viewer;
 - some other fixes and minor improvements.
 
 0.1.01 (01.01.2014):
